# signal-rs

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/signal-rs-bridge/: Cargo.toml
crates/signal-rs-bridge/src/: main.rs
crates/signal-rs-cli/: Cargo.toml
crates/signal-rs-cli/src/: cli.rs  main.rs
crates/signal-rs-cli/src/commands/: add_device.rs  add_sticker_pack.rs  backup.rs  block.rs  completions.rs  daemon.rs  delete_local_account_data.rs  finish_change_number.rs  get_attachment.rs  get_avatar.rs  get_sticker.rs  get_user_status.rs  history.rs  join_group.rs  link.rs  list_accounts.rs  list_contacts.rs  list_devices.rs  list_groups.rs  list_identities.rs  list_sticker_packs.rs  lookup.rs  mod.rs  quit_group.rs  receive.rs  register.rs  remote_delete.rs  remove_contact.rs  remove_device.rs  remove_pin.rs  reset_session.rs  search.rs  send.rs  send_contacts.rs  send_message_request_response.rs  send_payment_notification.rs  send_poll_create.rs  send_poll_terminate.rs  send_poll_vote.rs  send_reaction.rs  (+20 more)
crates/signal-rs-cli/src/output/: json.rs  mod.rs  plain.rs  table.rs
crates/signal-rs-manager/: Cargo.toml
crates/signal-rs-manager/src/: context.rs  error.rs  lib.rs  manager.rs  types.rs
crates/signal-rs-manager/src/helpers/: attachment.rs  contact.rs  group.rs  identity.rs  mod.rs  pin.rs  pre_key.rs  profile.rs  receive.rs  recipient.rs  send.rs  sticker.rs  storage.rs  sync.rs  unidentified_access.rs
crates/signal-rs-manager/src/jobs/: expiration.rs  mod.rs  pre_key_refresh.rs  profile_download.rs  recipient_update.rs  scheduler.rs  storage_sync.rs
crates/signal-rs-protocol/: Cargo.toml
crates/signal-rs-protocol/src/: address.rs  error.rs  identity.rs  keys.rs  lib.rs  message.rs  sealed_sender.rs  sender_key.rs  session.rs  stores.rs  types.rs
crates/signal-rs-protocol/tests/: libsignal_compat.rs
crates/signal-rs-protos/: Cargo.toml  build.rs
crates/signal-rs-protos/proto/: Groups.proto  Provisioning.proto  SignalService.proto  StorageService.proto  SubProtocol.proto  WireMessages.proto
crates/signal-rs-protos/src/: lib.rs
crates/signal-rs-service/: Cargo.toml
crates/signal-rs-service/src/: config.rs  credentials.rs  error.rs  lib.rs
crates/signal-rs-service/src/api/: account.rs  attachment.rs  cds.rs  certificate.rs  groups_v2.rs  keys.rs  message.rs  mod.rs  profile.rs  provisioning.rs  provisioning_cipher.rs  registration.rs  storage.rs  svr2.rs
crates/signal-rs-service/src/attachment/: mod.rs
crates/signal-rs-service/src/content/: mod.rs
crates/signal-rs-service/src/groups/: mod.rs
crates/signal-rs-service/src/net/: connection.rs  http.rs  mod.rs  websocket.rs
crates/signal-rs-service/src/pipe/: cipher.rs  mod.rs  receiver.rs  sender.rs
crates/signal-rs-service/src/profile/: mod.rs
crates/signal-rs-store/: Cargo.toml
crates/signal-rs-store/src/: database.rs  error.rs  lib.rs  passphrase.rs
crates/signal-rs-store/src/migrations/: mod.rs
crates/signal-rs-store/src/models/: attachment.rs  group.rs  message.rs  mod.rs  recipient.rs  thread.rs
crates/signal-rs-store/src/stores/: group_store.rs  identity_store.rs  kyber_pre_key_store.rs  message_store.rs  mod.rs  pre_key_store.rs  recipient_store.rs  sender_key_store.rs  session_store.rs  signed_pre_key_store.rs
crates/signal-rs-tui/: Cargo.toml
crates/signal-rs-tui/src/: app.rs  event.rs  main.rs
crates/signal-rs-tui/src/state/: app_state.rs  mod.rs  navigation.rs
crates/signal-rs-tui/src/ui/: chat.rs  command_palette.rs  dialog.rs  file_picker.rs  input.rs  mod.rs  notification.rs  search.rs  sidebar.rs  status_bar.rs  theme.rs
