[package]
name = "signal-rs-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "signal-rs"
path = "src/main.rs"

[dependencies]
signal-rs-manager = { workspace = true }
signal-rs-protocol = { workspace = true }
signal-rs-store = { workspace = true }
signal-rs-service = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
color-eyre = { workspace = true }
owo-colors = { workspace = true }
indicatif = { workspace = true }
inquire = { workspace = true }
tabled = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
qr2term = { workspace = true }
uuid = { workspace = true }
hostname = { workspace = true }
toml = { workspace = true }
base64 = { workspace = true }
