[package]
name = "signal-rs-manager"
version.workspace = true
edition.workspace = true

[dependencies]
signal-rs-protocol = { workspace = true }
signal-rs-protos = { workspace = true }
signal-rs-service = { workspace = true }
prost = { workspace = true }
signal-rs-store = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hkdf = { workspace = true }
aes = { workspace = true }
aes-gcm = { workspace = true }
ctr = { workspace = true }
argon2 = { workspace = true }
tabled = { workspace = true }
qr2term = { workspace = true }
zkgroup = { workspace = true }
usernames = { workspace = true }
libsignal-core = { workspace = true }
rand_09 = { workspace = true }
x25519-dalek = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
