[package]
name = "signal-rs-protocol"
version.workspace = true
edition.workspace = true

[dependencies]
signal-rs-protos = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
curve25519-dalek = { workspace = true }
sha2 = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
aes-gcm = { workspace = true }
ctr = { workspace = true }
serde_json = { workspace = true }
libsignal-protocol = { workspace = true }
rand_09 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
