[package]
name = "signal-rs-service"
version.workspace = true
edition.workspace = true

[dependencies]
signal-rs-protos = { workspace = true }
signal-rs-protocol = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
x25519-dalek = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
hmac = { workspace = true }
aes-gcm = { workspace = true }
urlencoding = { workspace = true }
toml = { workspace = true }
zkgroup = { workspace = true }
libsignal-core = { workspace = true }
snow = { workspace = true }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
rustls-pemfile = { workspace = true }
