[package]
name = "signal-rs-store"
version.workspace = true
edition.workspace = true

[dependencies]
signal-rs-protocol = { workspace = true }
signal-rs-protos = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
rpassword = { workspace = true }
